Library data filter added and marker data pop up fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 @if (isLoading) {
-    <div class="z-[1000000] absolute h-screen" > <ngx-ui-loader></ngx-ui-loader></div>
+    <div class="z-[1000000] absolute  bg-[rgba(32,39,45,0.3)]
+    h-screen w-full" > <ngx-ui-loader loaderId="customLoader"></ngx-ui-loader></div>
 }
 <app-home></app-home>
 
