--- a/src/app/common/groups-list/groups-list.component.html
+++ b/src/app/common/groups-list/groups-list.component.html
@@ -15,7 +15,7 @@
                 <img [src]="activeIndex?.id == group?.id ? 'assets/svg-icons/folder-icon-expanded.svg':'assets/svg-icons/folder-icon.svg'" alt="" />
                 <span >{{group.name}}</span>
             </div>
-            <span class="min-w-[102.324px]"></span>
+            <!-- <span class="min-w-[102.324px]"></span> -->
             <span class="min-w-[120px]">{{group.created_at | dateFormat}}</span>
             <span class="min-w-[127.933px]">{{roundOff(group.surface_area)}}km²</span>
             <div class="flex gap-[15px] min-w-[85px] justify-between items-center">
@@ -36,8 +36,8 @@
                                 [ngClass]="!group?.notification?'text-[#453303] bg-yellow':'text-secondary-heiglight'">Off</button>
                         </div>
                         <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="addGroup('addSubgroup',group)">Add subgroup</span>
-                        <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="renameGroup('rename',group)">Rename</span>
-                        <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="deleteGroup('delete',group)">Delete</span>
+                        <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="renameGroup('rename',group,'renameGroup')">Rename</span>
+                        <span class="text-yellow text-xs font-bold leading-[18px] cursor-pointer" (click)="deleteGroup('delete',group,'deleteGroup')">Delete</span>
                     </div>
                 </mat-menu>
             </div>
@@ -51,16 +51,16 @@
                     <div class="flex flex-col gap-[10px]">
                         <div (click)="getSitesDetail(site)" class="py-[10px] items-center cursor-pointer flex border-y border-y-solid border-y-custom-border px-[15px] font-Barlow font-medium leading-[18px] text-secondaryText text-xs">
                             <div class="min-w-[340px] flex items-center gap-[15px]" [ngStyle]="{ 'padding-left': getPadding(padding) + 'px' }">
-                                <img [ngClass]="{'point-site': site?.site_type == 'Point'}" class="h-[25px] w-[25px] object-cover" height="30" width="30" [src]="getSiteType(site?.site_type)" alt="" />
+                                <img class="h-[25px] w-[25px] object-cover" height="30" width="30" [src]="site.site_type == 'Rectangle'? 'assets/svg-icons/rectangle-icon.svg':'assets/svg-icons/polygon-icon.svg'" alt="" />
                                 <span >{{site.name}}</span>
                             </div>
-                            <span class="min-w-[102.324px]"></span>
+                            <!-- <span class="min-w-[102.324px]"></span> -->
                             <span class="min-w-[120px]">{{site.date | dateFormat}}</span>
                             <span class="min-w-[127.933px]">{{roundOff(site?.area)}}km²</span>
                             <div class="flex gap-[15px] min-w-[85px] justify-between items-center">
                                 <!-- <span class="text-secondary-heiglight">{{site.total_objects}}</span> -->
                                 <span class="text-secondary-heiglight">{{site?.count}}</span>
-                                <span class="w-[16px] h-[16px] flex cursor-pointer" (click)="$event.stopPropagation();setClass()" [matMenuTriggerFor]="siteMenu">
+                                <span class="w-[16px] h-[16px] flex cursor-pointer" (click)="$event.stopPropagation();setMainClass()" [matMenuTriggerFor]="siteMenu">
                                     <img src="assets/svg-icons/nav-menu-icon.svg" />
                                 </span>
                                 <mat-menu class="bg-secondaryBg" panelClass="custom-panel-class"  #siteMenu="matMenu" id="site" overlayPanelClass="custom-backdrop-class">
@@ -90,7 +90,7 @@
                     <div
                 class="flex py-[15px] px-[5px] items-center gap-[15px] self-stretch bg-primaryBg border-b border-b-solid border-custom-border">
                 <div class="flex flex-col items-start gap-[15px] flex-0">
-                    <!-- <div class="flex py-[5px] px-[5px] items-center gap-[15px] self-stretch">
+                    <div class="flex py-[5px] px-[5px] items-center gap-[15px] self-stretch">
                         <span class="w-[16px] flex">
                             <img class="object-cover w-[40px] h-[30px]" height="30" width="30"
                                 [src]="siteDetail?.site_type =='Polygon'? 'assets/svg-icons/polygon-icon.svg':'assets/svg-icons/rectangle-icon.svg'" />
@@ -99,14 +99,14 @@
                         <span class="w-[16px] h-[16px] flex">
                             <img src="assets/svg-icons/plus-icon.svg" />
                         </span>
-                        <span class="w-[16px] h-[16px] flex">
+                        <!-- <span class="w-[16px] h-[16px] flex">
                             <img src="assets/svg-icons/nav-menu-icon.svg" />
-                        </span>
+                        </span> -->
                         <div class="w-[16px] h-[16px] flex ">
                             <span class="w-[16px] h-[16px] flex cursor-pointer" >
                                 <img src="assets/svg-icons/nav-menu-icon.svg" />
                             </span>
-                            <mat-menu class="bg-secondaryBg" #menu="matMenu" id="site">
+                            <!-- <mat-menu class="bg-secondaryBg" #menu="matMenu" id="site">
                                 <div class="inline-flex p-[15px] font-Barlow flex-col items-start gap-[15px]">
                                     <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Notifications</span>
                                     <div class="rounded-[25px] bg-primaryBg flex items-center justify-between">
@@ -153,9 +153,9 @@
                                     </mat-menu>
                                     </div>
                                 </div>
-                            </mat-menu>
+                            </mat-menu> -->
                         </div>
-                    </div> -->
+                    </div>
                     <div class="flex min-w-[775px] items-center gap-[15px] self-stretch">
                         <div
                             class="flex flex-col justify-center items-start px-[8px] py-[15px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg">
@@ -190,27 +190,27 @@
                                 <div class="flex felx-col ">
                                     <div class="flex gap-[5px] font-Barlow flex-wrap">
                                         <div class="flex items-center flex-col gap-[5px]">
-                                            <span class="w-[15px] h-[15px] bg-[#272F34] rounded-[5px]"></span>
+                                            <span class="w-[15px] h-[15px] bg-[#2ECC71] rounded-[5px]"></span>
                                             <span class="text-secondaryText text-[10px]">Very low</span>
                                         </div>
                                         <div class="flex items-center flex-col gap-[5px]">
-                                            <span class="w-[15px] h-[15px] bg-[#2A2130] rounded-[5px]"></span>
+                                            <span class="w-[15px] h-[15px] bg-[#218838] rounded-[5px]"></span>
                                             <span class="text-secondaryText text-[10px]">Low</span>
                                         </div>
                                         <div class="flex items-center flex-col gap-[5px]">
-                                            <span class="w-[15px] h-[15px] bg-[#122B64] rounded-[5px]"></span>
+                                            <span class="w-[15px] h-[15px] bg-[#B22222] rounded-[5px]"></span>
                                             <span class="text-secondaryText text-[10px]">Medium</span>
                                         </div>
                                         <div class="flex items-center flex-col gap-[5px]">
-                                            <span class="w-[15px] h-[15px] bg-[#386118] rounded-[5px]"></span>
+                                            <span class="w-[15px] h-[15px] bg-[#D32F2F] rounded-[5px]"></span>
                                             <span class="text-secondaryText text-[10px]">High</span>
                                         </div>
                                         <div class="flex items-center flex-col gap-[5px]">
-                                            <span class="w-[15px] h-[15px] bg-[#FFC300] rounded-[5px]"></span>
+                                            <span class="w-[15px] h-[15px] bg-[#C70039] rounded-[5px]"></span>
                                             <span class="text-secondaryText text-[10px]">Very high</span>
                                         </div>
                                         <div class="flex items-center flex-col gap-[5px]">
-                                            <span class="w-[15px] h-[15px] bg-[#C70039] rounded-[5px]"></span>
+                                            <span class="w-[15px] h-[15px] bg-[#8B0000] rounded-[5px]"></span>
                                             <span class="text-secondaryText text-xs">Very extreme</span>
                                         </div>
                                     </div>
