--- a/src/app/components/sidebar-drawer/sidebar-drawer.component.html
+++ b/src/app/components/sidebar-drawer/sidebar-drawer.component.html
@@ -8,5 +8,7 @@
 } -->
  @else if(type === 'Groups'){
     <app-groups (closeDrawer)="closeDrawer($event)"></app-groups>
+} @else if (type === 'Imagery') {
+    <app-imagery-status (closeDrawer)="closeDrawer($event)"></app-imagery-status>
 }
 </div>
