--- a/src/app/components/sites/sites.component.html
+++ b/src/app/components/sites/sites.component.html
@@ -92,29 +92,29 @@
                         </mat-menu>
                     </div>
                 </div>
-                <div class="flex min-w-[775px] items-center gap-[15px] self-stretch">
+                <div class="flex min-w-[775px] items-center gap-[15px] self-stretch custome-grid">
                     <div
-                        class="flex flex-col justify-center items-start p-[15px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg">
+                        class="flex flex-col justify-center items-start p-[15px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg min-w-[100px]">
                         <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Frequency</span>
                         <span class="text-secondaryText text-xs font-bold leading-normal">{{site?.frequency}}</span>
                     </div>
                     <div
-                        class="flex flex-col justify-center items-start p-[15px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg">
+                        class="flex flex-col justify-center items-start p-[15px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg min-w-[100px]">
                         <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Most recent</span>
                         <span class="text-secondaryText text-xs font-bold leading-normal">{{site?.most_recent | dateFormat}}</span>
                     </div>
                     <div
-                        class="flex flex-col justify-center items-start p-[15px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg">
+                        class="flex flex-col justify-center items-start p-[15px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg min-w-[100px]">
                         <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Gap</span>
                         <span class="text-secondaryText text-xs font-bold leading-normal">{{site?.gap.toFixed(3)}}</span>
                     </div>
                     <div
-                        class="flex flex-col justify-center items-start p-[15px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg">
+                        class="flex flex-col justify-center items-start p-[15px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg min-w-[100px]">
                         <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Most recent</span>
                         <span class="text-yellow text-xs font-bold leading-normal">{{site?.most_recent | dateFormat}}</span>
                     </div>
                     <div
-                        class="flex flex-col justify-center items-start p-[15px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg">
+                        class="flex flex-col justify-center items-start p-[15px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg min-w-[150px]">
                         <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Most recent clear</span>
                         <span class="text-yellow text-xs font-bold leading-normal">{{site?.most_recent_clear | dateFormat}}</span>
                     </div>
